k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chaoxing
  labels:
    name: chaoxing
    app: chaoxing-platform
